# ocaml-imagelib

./: .gitignore  .merlin  .travis.yml  CHANGES  CONTRIBUTIONS  DESCRIPTION  GNUmakefile  META  README  README.md  _tags  dune  dune-project  image.ml  image.mli  imageChannels.ml  imageGIF.ml  imageJPG.ml  imageLib.ml  imageLib.mli  imagePNG.ml  imagePPM.ml  imageSequence.ml  imageUtil.ml  imageXCF.ml  imagelib-unix.opam  imagelib.mllib  imagelib.opam  index.html  jbuild  odoc.css  opam  opam.tmpl
.github/workflows/: ci.yml
app/: convert.ml  dune  imagetool.ml
common/: dune  image.ml  image.mli  interface.ml  pixmap.ml  pixmap.mli  reader.ml  reader.mli  util.ml
imagelib/: index.html
imagelib/Image/: index.html
imagelib/Image/Pixmap/: index.html
imagelib/Image/Resize/: index.html
imagelib/Image/module-type-ReadImage/: index.html
imagelib/Image/module-type-ReadImageStreaming/: index.html
imagelib/Image/module-type-WriteImage/: index.html
imagelib/ImageBMP/: index.html
imagelib/ImageBMP/Bitfield/: index.html
imagelib/ImageBMP/BitmapMetaData/: index.html
imagelib/ImageBMP/BitmapMetaData/HeaderVersion/: index.html
imagelib/ImageBMP/BmpUtils/: index.html
imagelib/ImageBMP/FileHeader/: index.html
imagelib/ImageBMP/ReadBMP/: index.html
imagelib/ImageGIF/: index.html
imagelib/ImageJPG/: index.html
imagelib/ImageJPG/ReadJPG/: index.html
imagelib/ImageLib/: index.html
imagelib/ImageLib/BMP/: index.html
imagelib/ImageLib/BMP/ReadBMP/: index.html
imagelib/ImageLib/GIF/: index.html
imagelib/ImageLib/JPG/: index.html
imagelib/ImageLib/JPG/ReadJPG/: index.html
imagelib/ImageLib/PNG/: index.html
imagelib/ImageLib/PNG/ReadPNG/: index.html
imagelib/ImageLib/PPM/: index.html
imagelib/ImageLib/PPM/ReadPPM/: index.html
imagelib/ImageLib/XCF/: index.html
imagelib/ImageLib/XCF/ReadXCF/: index.html
imagelib/ImageLib_unix/: index.html
imagelib/ImagePNG/: index.html
imagelib/ImagePNG/PNG_CRC/: index.html
imagelib/ImagePNG/PNG_Zlib/: index.html
imagelib/ImagePNG/PngWriter/: index.html
imagelib/ImagePNG/ReadPNG/: index.html
imagelib/ImagePPM/: index.html
imagelib/ImagePPM/ReadPPM/: index.html
imagelib/ImageUtil/: index.html
imagelib/ImageUtil_unix/: index.html
imagelib/ImageXCF/: index.html
imagelib/ImageXCF/ReadXCF/: index.html
src/: dune  image.ml  image.mli  imageBMP.ml  imageChannels.ml  imageGIF.ml  imageGIF.mli  imageJPG.ml  imageLib.ml  imageLib.mli  imagePNG.ml  imagePPM.ml  imageUtil.ml  imageXCF.ml
tests/: aflrunner.ml  dune  tests.ml  testwithcrowbar.ml
tests/png-suite/: README.md  dune
tests/png-suite/tests/: test-error.sh  test.sh
tests/png-suite/tests/additional-palletes.t/: README.md  run.t
tests/png-suite/tests/ancillary-chunks.t/: README.md  run.t
tests/png-suite/tests/background-colors.t/: README.md  run.t
tests/png-suite/tests/basic-formats.t/: README.md  run.t
tests/png-suite/tests/chunk-ordering.t/: README.md  run.t
tests/png-suite/tests/corrupted-files.t/: README.md  run.t
tests/png-suite/tests/gamma-values.t/: README.md  run.t
tests/png-suite/tests/image-filtering.t/: README.md  run.t
tests/png-suite/tests/interlacing.t/: README.md  run.t
tests/png-suite/tests/odd-sizes.t/: README.md  run.t
tests/png-suite/tests/transparency.t/: README.md  run.t
tests/png-suite/tests/zlib-compression-level.t/: README.md  run.t
unix/: dune  imageLib_unix.ml  imageLib_unix.mli  imageUtil_unix.ml
