synopsis: "Utility library for 'imagelib' with Unix-dependent functionality"
description:
"""
This package implements Unix-dependent functionality for the 'imagelib' library.

This includes operations like interacting with the filesystem
(reading or writing to files).

Another feature is supported for unimplemented image formats through an
intermediate step of converting the image to PNG format
using the 'convert' command from the 'imagemagick' operating system package,
if installed. While ImageMagick is required for this feature, is is not a hard
dependency of this OPAM package since that would prevent people who can't
install imagemagick from using 'imagelib-unix' to read or write the implemented
file formats.
"""
opam-version: "2.0"
maintainer: "rodolphe.lepigre@inria.fr"
bug-reports: "https://github.com/rlepigre/imagelib/issues"
homepage: "https://github.com/rlepigre/imagelib"
dev-repo: "git+https://github.com/rlepigre/imagelib.git"
authors: [
  "Rodolphe Lepigre <rodolphe.lepigre@inria.fr>"
]
license: "GPLv3"
doc: "https://github.com/rlepigre/imagelib"

depends: [
  "ocaml"        {         >= "4.07.0" }
  "dune"         { build & >= "2.3.0"  }
  "alcotest"     { with-test }
  "crowbar" { with-test }
  "imagelib"     { = version }
]

depopts: [
  "afl-persistent" { with-test }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
