(executable
 ; this is only built if AFL
 ; is installed:
 (optional)
 (name aflrunner)
 (public_name aflrunner)
 (modules aflrunner)
 (libraries imagelib imagelib.unix afl-persistent))

(executable
 ; this is only built if crowbar
 ; is installed:
 (optional)
 (name testwithcrowbar)
 (public_name testwithcrowbar)
 (modules testwithcrowbar)
 (libraries imagelib imagelib.unix alcotest crowbar))

(test
 (name tests)
 (modules tests)
 (libraries imagelib imagelib.unix alcotest))

(rule
 (alias slowtests)
 (targets testwithcrowbar)
 (action
   (run %{exe:testwithcrowbar.exe})))
